kubernetes/apps/network/external-services/kvm-pve2/endpoint.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app kvm-pve2
  labels:
    kubernetes.io/service-name: *app
    endpointslice.kubernetes.io/managed-by: *app
addressType: IPv4
endpoints:
  - addresses:
      - 10.100.0.52
    conditions:
      ready: true
ports:
  - name: http
    port: 80
