kubernetes/apps/network/external-services/kvm-pve2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kvm-pve2
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
